--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ idna               3.3
 pip                22.0.4
 praw               7.5.0
 prawcore           2.3.0
+python-dotenv      0.20.0
 requests           2.27.1
 setuptools         61.0.0
 update-checker     0.18.0
