--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,22 @@
-Package            Version
------------------- ---------
-certifi            2021.10.8
-charset-normalizer 2.0.12
-idna               3.3
-pip                22.0.4
-praw               7.5.0
-prawcore           2.3.0
-python-dotenv      0.20.0
-requests           2.27.1
-setuptools         61.0.0
-update-checker     0.18.0
-urllib3            1.26.9
-websocket-client   1.3.2
-wheel              0.37.1
+appnope==0.1.3
+asttokens==2.0.5
+backcall==0.2.0
+decorator==5.1.1
+distlib==0.3.4
+executing==0.8.3
+filelock==3.6.0
+jedi==0.18.1
+matplotlib-inline==0.1.3
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+platformdirs==2.5.1
+prompt-toolkit==3.0.29
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.11.2
+six==1.16.0
+stack-data==0.2.0
+traitlets==5.1.1
+virtualenv==20.14.0
+wcwidth==0.2.5
